<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sobkovych.appmonitor.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorControlHighlight">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="@string/connection_type_text"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        android:textSize="16sp"
                        android:textStyle="normal|bold"
                        android:padding="5dp" />

                    <TextView
                        android:text="@string/connection_type_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewConnType"
                        android:padding="5dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="@string/own_ip_address_text"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:textStyle="normal|bold"
                        android:textSize="16sp"
                        android:padding="5dp" />

                    <TextView
                        android:text="@string/own_ip_address_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewIpAddr"
                        android:padding="5dp" />

                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="@string/moon_app_name_text"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:textStyle="normal|bold"
                        android:textSize="16sp"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimaryDark" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/moon_app_name_value"
                        android:ems="10"
                        android:id="@+id/etAppName"
                        android:textSize="14sp"
                        android:background="@android:color/background_light"
                        android:padding="5dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="@string/rest_listener_port_text"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:textStyle="normal|bold"
                        android:textSize="16sp"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimaryDark" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/etRestPort"
                        android:textSize="14sp"
                        android:text="@string/rest_listener_port_value"
                        android:background="@android:color/background_light"
                        android:padding="5dp" />
                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:text="@string/action_restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_restart" />

            <Button
                android:text="@string/action_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_stop" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>

<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/activity_main"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--tools:context="com.sobkovych.appmonitor.MainActivity">-->

    <!--<LinearLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="117dp"-->
            <!--android:id="@+id/textViewInfo"-->
            <!--android:textSize="18sp"-->
            <!--android:textColor="@color/colorPrimaryDark"-->
            <!--android:textStyle="normal|bold" />-->

        <!--<Space-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="17dp" />-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="360dp"-->
            <!--android:id="@+id/textViewLog"-->
            <!--android:textSize="10sp"-->
            <!--android:fontFamily="monospace" />-->
    <!--</LinearLayout>-->
<!--</RelativeLayout>-->
